--- a/scss/layout/_interview.scss
+++ b/scss/layout/_interview.scss
@@ -31,22 +31,39 @@
         }
     }
 }
-
-.slider {
+.slider__container {
     position: relative;
-
-    // & img{
-    //     @include mobile {
-    //         display: block;
-    //         position: absolute;
-    //         width: 414px;
-    //         height: 194.06px;
-    //         left: 0px;
-    //         top: 163px;
-    //     }
-    // }
-    z-index: 1;
-}
+    &--icon {
+      @include mobile {
+        display: none;
+      }
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      margin: 0 32px 44px 0;
+      z-index: 12;
+      .icon1 {
+        margin-right: 42px;
+      }
+    }
+    .slider {
+     
+      &--item {
+        z-index: 1;
+        width: 100%;
+        max-width: 100%;
+        height: 860px;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: auto;
+        @include mobile {
+          background-size: contain;
+          height: 194px;
+          width: 414px;
+        }
+      }
+    }
+  }
 
 .image-list {
     display: flex;
@@ -645,6 +662,7 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
+       // margin-bottom: -40px;
 
         @include mobile {
             height: 108px;
@@ -700,11 +718,11 @@
     margin: 10px;
 
     & div {
-        box-shadow: 5px 5px 5px gray;
+        box-shadow: 5px 5px 5px rgb(170, 167, 167);
 
         @include mobile {
             margin: 0;
-            box-shadow: 5px 5px 5px gray;
+            box-shadow: 5px 5px 5px rgb(179, 173, 173);
 
         }
     }
@@ -822,6 +840,7 @@
         height: 400px;
         width: 400px;
         text-align: center;
+        
 
         & .lg {
             color: white;
